style.css
*,
*::before,
*::after {
    box-sizing: border-box;
    font-family: arial, serif;
    font-weight: normal;
}
html {
    background-color: black;
    /* height: 100vh; */
    /* background-image: url(brave_mBtwB4mBxj.png);
    background-repeat: no-repeat;
    background-size: 100vw 100vh; */
}
body {
    padding: 0;
    margin: 0;
}
.eror-container {
    position: fixed;
    visibility: hidden;
    padding: 0;
    width: 100vw;
    min-height: 100vh;
    background-color: rgba(49, 231, 255, 0.5);
    top: 0;
    z-index: 1;
}
.eror {
    border-radius: 6px;
    visibility: hidden;
    width: 396px;
    height: 150px;
    position: fixed;
    left: 50%;
    margin-left: -198px;
    top: 50%;
    margin-top: -75px;

    background-color: rgba(255, 66, 60, 1);
}
.eror > h1 {
    /* max-width: 400px; */
    font-weight: bold;
    text-align: center;
}
.eror > button {
    width: fit-content;
    font-size: 1.2rem;
    height: 40px;
    position: absolute;
    left: 50%;
    top: 70%;
    margin-left: -21.5px;
    background-color: black;
    color: white;
    border-radius: 20px;
}
.eror > button:hover {
    outline: 2px white dotted;
    opacity: 0.85;
    cursor: pointer;
}
.container-grid {
    display: grid;
    justify-content: center;
    align-content: center;
    /* margin-top: 2.5vh; */
    grid-template-columns: repeat(4, 100px);
    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
}
.container-grid > button {
    cursor: pointer;
    font-size: 2rem;
    color: white;
    /* border: 1px solid rgb(255, 0, 0); */
    outline: none;
    background-color: rgb(127, 128, 131);
}

.screen {
    border-radius: 20px 20px 0 0;
    margin-left: 2px;
    padding: 0;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-end;
    min-height: 150px;
    word-wrap: break-word;
    word-break: break-all;
    width: 99%;
    grid-column: 1 / -1; /* stavlja ovo u zadnji column*/
    background-color: rgb(139, 179, 255);
}
.rezultat {
    padding-right: 8px;
    font-size: 2.2rem;
    font-weight: 600;
    color: rgba(0, 0, 0, 1);
}

.current-broj {
    outline: none;
    border-radius: 5px;
    overflow: visible;
    text-align: right;
    color: black;
    font-weight: 600;
    width: 400px;
    font-size: 2.5rem;
}

.decimale-container {
    text-align: center;
    color: black;
    display: grid;
    justify-content: center;
    align-content: center;
}
.Dtitle {
    color: white;
}
.ar-up:hover {
    cursor: pointer;
}

.ar-up {
    border-radius: 7px;
    outline: none;
    box-sizing: border-box;
    border: none;
    background: rgb(139, 179, 255);
    font-size: 1.8rem;
    margin-bottom: 6px;
    /* border: 1px greenyellow solid; */
    width: fit-content;
    margin-left: 44%;
}

.broj-decimala {
    border-radius: 7px;
    margin-left: 45%;
    background: rgb(139, 179, 255);
    font-size: 1.8rem;
    margin-bottom: 6px;
    /* border: 1px greenyellow solid; */
    width: fit-content;
}

.ar-down {
    border-radius: 7px;
    outline: none;
    box-sizing: border-box;
    border: none;
    background: rgb(139, 179, 255);
    font-size: 1.8rem;
    margin-bottom: 6px;
    /* border: 1px greenyellow solid; */
    width: fit-content;
    margin-left: 44%;
}

.ar-down:hover {
    cursor: pointer;
}

.dark:hover {
    background-image: url(brave_mBtwB4mBxj.png) !important;
    background-size: 200px 100px, cover !important;
}
.span-two {
    grid-column: span 2;
}
.container-grid > button:hover {
    background-color: rgba(0, 0, 0, 0.5);
}

.darkviper:hover {
    background-image: url(brave_mBtwB4mBxj.png);
    background-size: 100px 100px, cover;
}

.au {
    background-image: url(brave_mBtwB4mBxj.png);
}

/* .korijen {
    background-image: url(korijen.png);
    background-size: 90px 100px;
    background-repeat: no-repeat;
} */

/* MAKNE STRELICE SA INPUTA */
/* input[type='number']::-webkit-outer-spin-button,
input[type='number']::-webkit-inner-spin-button {
    -webkit-appearance: none !important;
    margin: 0 !important;
}

input[type='number'] {
    -moz-appearance: textfield !important;
} */

